# smart-factory-robot-arm

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/IR/: IR_sensor.c  IR_sensor.h
lib/LCD/: LCD_driver.c  LCD_driver.h
lib/LED/: LED_driver.c  LED_driver.h
lib/MetalDetector/: metal_detector.c  metal_detector.h
lib/Servo/: servo.c  servo.h
lib/Ultrasonic/: ultrasonic.c  ultrasonic.h
src/: CMakeLists.txt  main.c
